--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -1,37 +1,24 @@
-name: Sync to GitHub
+name: Sync from Bitbucket
 
 on:
-  # Triggers the workflow on push events
   push:
-    branches:
-      - main  # or master, depending on your default branch
+    branches: [ "main" ]
       
-  # Allows manual trigger
-  workflow_dispatch:
 
 jobs:
   sync:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          
-      - name: Configure Git
+
+      - name: Sync from Bitbucket
+        env:
+          BITBUCKET_USERNAME: ${{ secrets.BITBUCKET_USERNAME }}
+          BITBUCKET_PASSWORD: ${{ secrets.BITBUCKET_PASSWORD }}
         run: |
-          git config --global user.name 'GitHub Action'
-          git config --global user.email 'action@github.com'
-          
-      - name: Add Bitbucket Remote
-        run: |
-          git remote add bitbucket https://${{ secrets.BITBUCKET_USERNAME }}:${{ secrets.BITBUCKET_PASSWORD }}@bitbucket.org/succpinnsolutions/ecommerapp.git 
-      - name: Fetch from Bitbucket
-        run: |
+          git remote add bitbucket https://$BITBUCKET_USERNAME:$BITBUCKET_PASSWORD@bitbucket.org/succpinnsolutions/ecommerapp.git
           git fetch bitbucket
-          
-      - name: Sync Changes
-        run: |
-          git checkout main
           git merge bitbucket/main
           git push origin main
