--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -16,7 +16,7 @@ jobs:
 
       - name: Mirror to GitHub
         run: |
-          git remote set-url origin https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
+          git remote set-url origin https://${{ secrets.GH_PAT }}@github.com/${{ github.repository }}
           git fetch bitbucket  https://succpinnsolutions-admin@bitbucket.org/succpinnsolutions/ecommerapp.git # Fetch changes from Bitbucket
           git push --mirror origin
         env:
