--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -1,24 +1,48 @@
-name: Mirror Bitbucket to GitHub
+name: Sync from Bitbucket
 
 on:
   schedule:
-    - cron: '*/5 * * * *' # Runs every 5 minutes (adjust as needed)
-  workflow_dispatch: # Allows manual triggering
+    - cron: '0 * * * *' # Sync every hour
+  workflow_dispatch: # Allow manual trigger
 
 jobs:
-  mirror:
+  sync:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code
+      - name: Checkout GitHub repository
         uses: actions/checkout@v3
         with:
-          fetch-depth: 0 # Important: Fetches all history
+          persist-credentials: true # Use default GitHub token
+          fetch-depth: 0 # Fetch all history for accurate syncing
 
-      - name: Mirror to GitHub
+      - name: Check for local changes
         run: |
-          git remote set-url origin https://${{ secrets.GH_PAT }}@github.com/${{ github.repository }}
-          git fetch bitbucket  https://succpinnsolutions-admin@bitbucket.org/succpinnsolutions/ecommerapp.git # Fetch changes from Bitbucket
-          git push --mirror origin
+          git diff --exit-code || echo "There are local changes. Please commit or stash them before proceeding."
+
+      - name: Add Bitbucket remote
         env:
-          BITBUCKET_USERNAME: succpinnsolutions-admin
-          BITBUCKET_PASSWORD: ${{ secrets.BITBUCKET_PASSWORD }}
+          BITBUCKET_USERNAME: ${{ secrets.BITBUCKET_USERNAME }}
+          BITBUCKET_APP_PASSWORD: ${{ secrets.BITBUCKET_PASSWORD }}
+        run: |
+          set -e
+          git remote add bitbucket https://$BITBUCKET_USERNAME:$BITBUCKET_PASSWORD@bitbucket.org/succpinnsolutions/ecommerapp.git
+          git fetch bitbucket
+
+      - name: Check remotes and branches
+        run: |
+          git remote -v
+          git branch -a
+          git log --oneline -n 5
+
+      - name: Merge Bitbucket changes
+        run: |
+          git merge bitbucket/main --allow-unrelated-histories --no-edit || echo "No changes to merge"
+
+      - name: Push changes to GitHub
+        run: git push origin main
+
+      - name: Clean up
+        run: |
+          git remote -v
+          git remote remove bitbucket
